ft_services/srcs/nginx/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: nginx-deployment
spec:
    replicas: 1
    selector:
         matchLabels:
                app: nginx
    template:
        metadata:
         labels:
            app: nginx
        spec:
         restartPolicy: Always
         containers:
         - name: nginx
           imagePullPolicy: Never
           image: nginx-image:latest
           ports:
           - containerPort: 80
           - containerPort: 22
---
apiVersion: v1
kind: Service
metadata:
    name: nginx-service
spec:
    ports:
    - port: 80
      targetPort: 80
    selector:
          app: nginx
---
apiVersion: v1
kind: Service
metadata:
    name: ssh-service
spec:
    type: NodePort
    selector:
       app: nginx
    ports:
    - port: 2222
      targetPort: 22
      nodePort: 2222
