ft_services/srcs/nginx/ingress-controler.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-controler
spec:
    backend:
        serviceName: nginx-service
        servicePort: 80
